phoenix fix: removed background in theme html so the icon doesn't get covered
the background will still be there because body { background } is set.

--- a/packages/themes/scss/source/template.scss
+++ b/packages/themes/scss/source/template.scss
@@ -128,11 +128,6 @@ nav {
   }
 }
 
-html {
-  background: $backgroundColor;
-  font-family: $mainFont;
-}
-
 body {
   background: $backgroundColor;
   font-family: $mainFont;
